# BusinessSuite

./: .dockerignore  .env.example  .flake8  .gitignore  .prettierignore  .pyre_configuration  API_ENDPOINTS.md  CHANGELOG.md  DEPLOYMENT_FIX.md  DOCX_TEMPLATE_HOWTO.md  Dockerfile  Dockerfile-dev  Dockerfile.cron  Dockerfile.frontend  GEMINI.md  INVOICE_IMPORT_FEATURE.md  README-project-presentation.md  README.md  S3_MIGRATION_PROMPT.md  TODO.md  backup_postgres15.sh  clean_mypy_cache.sh  cronjob  docker-compose-desktop-stack.yml  docker-compose-local.yml  docker-compose.yml  estore_postgres18.sh  fixtures.sh  frontend-refactor-plan.md  invoice-initial-snapshot.md  load_env.py  manage.py  pyproject.toml  pyrightconfig.json  refresh-schema-and-api.sh  requirements  requirements.txt  restore_postgres18.sh  schema.yaml  schema.yml  (+4 more)
backend/: .dockerignore  .gitignore  Dockerfile  fix_test_async.py  manage.py  pyproject.toml  requirements.txt  run_custom_test.py  run_dramatiq_test.py  run_full_dramatiq_workflow.py  run_raw_test.py  run_service_test.py  run_twoshot_test.py  schema.yaml  start.sh  test_ai_usage.py  test_or_gen.py  test_passport_api.py  test_qwen_passport.py  test_qwen_strict.py
backend/admin_tools/: apps.py  services.py  tasks.py  urls.py  views.py
backend/admin_tools/components/: document_type_list.py
backend/admin_tools/tests/: test_backup_restore_services.py  test_cache_health_service.py  test_calendar_sync_health_service.py  test_media_diagnostic_services.py  test_restore_backup_command.py
backend/api/: async_controls.py  cache_resilience.py  google_views.py  permissions.py  reports_views.py  tests.py  urls.py  view_applications.py  view_auth_catalog.py  view_billing.py  view_notifications.py  view_realtime.py  views.py  views_admin.py  views_categorization.py  views_health.py  views_imports.py  views_rbac.py  views_shared.py  views_sync.py
backend/api/serializers/: __init__.py  ai_model_serializer.py  async_job_serializer.py  auth_serializer.py  calendar_reminder_serializer.py  categorization_serializer.py  country_code_serializer.py  customer_serializer.py  dashboard_serializer.py  doc_application_serializer.py  doc_workflow_serializer.py  document_serializer.py  document_type_serializer.py  google_calendar_serializer.py  holiday_serializer.py  invoice_import_serializer.py  invoice_serializer.py  letters_serializer.py  local_resilience_serializer.py  passport_check_serializer.py  product_serializer.py  product_write_utils.py  push_notification_serializer.py  quick_create_serializer.py  rbac_mixin.py  ui_settings_serializer.py  user_serializer.py  user_settings_serializer.py  workflow_notification_serializer.py
backend/api/services/: rbac_service.py
backend/api/tests/: async_iter_helper.py  test_admin_tools_permissions.py  test_ai_model_pricing_api.py  test_api_general.py  test_application_doc_date_sync_api.py  test_async_authorization_controls.py  test_async_enqueue_indexes.py  test_auth_serializer.py  test_auth_token_api.py  test_backups_api_timezone.py  test_cache_resilience.py  test_calendar_reminder_api.py  test_customer_application_list_api.py  test_document_categorization_apply.py  test_document_categorization_stream_sse.py  test_document_categorization_upload_parallel.py  test_document_categorization_upload_progress.py  test_document_ocr_api.py  test_document_preupload_validation_api.py  test_google_calendar.py  test_google_calendar_requestmock.py  test_google_tasks.py  test_health_check.py  test_idempotency_utils.py  test_ocr_status_preview_url.py  test_passport_check_api.py  test_product_and_report_role_permissions.py  test_product_price_list_api.py  test_reports_views.py  (+14 more)
backend/business_suite/: asgi.py  authentication.py  context_processors.py  dramatiq.py  pgqueue.py  urls.py  wsgi.py
backend/cache/: API_DOCUMENTATION.md  ARCHITECTURE.md  MIGRATION_RUNBOOK.md  OPTIMIZATION_NOTES.md  POST_MIGRATION_CHECKLIST.md  PRE_MIGRATION_CHECKLIST.md  __init__.py  apps.py  cacheops_wrapper.py  metrics.py  middleware.py  namespace.py  serialization.py  serializers.py  urls.py  views.py
backend/core/: admin.py  apps.py  openapi.py  signals.py  signals_app_setting.py  signals_calendar.py  signals_calendar_reminder.py  signals_streams.py  sync_signals.py  views.py
backend/customer_applications/: admin.py  apps.py  signals.py  tasks.py  urls.py
backend/customers/: admin.py  apps.py  models.py  tasks.py  tests.py  tests_passport_customer_match_service.py  urls.py
backend/dev_scripts/: _bootstrap.py  smoke_async_client.py  smoke_passport_api.py  smoke_passport_custom.py  smoke_passport_dramatiq_workflow.py  smoke_passport_service.py  smoke_passport_two_shot.py  smoke_passport_vision_api.py  smoke_qwen_passport.py  smoke_qwen_strict.py
backend/fixtures/: document_types.json  products.json
backend/invoices/: admin.py  apps.py  urls.py
backend/landing/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/letters/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
backend/payments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/products/: admin.py  apps.py  urls.py
backend/reports/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/scripts/: healthcheck_scheduler.sh  healthcheck_worker.sh  init_db.sh  pg_dump_compat.sh  pg_restore_compat.sh  relocate_replace.sh  restore_postgres18.sh  run_dramatiq_workers.sh
(+1875 files in other folders)
