[project]
name = "business_suite"
version = "0.1.0"
description = "A web-based ERP system for managing operations in a visa agency."
authors = [
    { name = "Stefano Galassi", email = "galaxy73.it@gmail.com" }
]
dependencies = [
    "Django==5.2.4",
    "python-dotenv==1.1.1",
    "whitenoise==6.9.0",
    "gunicorn==23.0.0",
    "django-bootstrap-sidebar~=1.2.0",
    "djangorestframework==3.16.0",
    "django-cors-headers==4.7.0",
    "django-widget-tweaks==1.5.0",
    "django-nested-admin==4.1.1",
    "crispy-bootstrap5==2025.6",
    "PassportEye",
    "pdf2image==1.17.0",
    "fontawesomefree==6.6.0",
    "django-unicorn==0.62.0",
    "django-debug-toolbar>=6.0.0",
    "rapidfuzz>=3.13.0",
    "django-storages~=1.13.2",
    "django-dbbackup>=4.1.0",
    "django-cron~=0.6.0",
    "django-cleanup~=8.0.0",
    "requests~=2.31.0",
    "psycopg2-binary~=2.9.6",
    "dropbox~=11.36.2",
    "pymemcache~=4.0.0",
    "docx-mailmerge~=0.5.0",
    "pyyaml",
    "ua-parser",
    "user-agents",
    "django-user-agents",
    "seaborn",
    "pillow",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api",
    "core",
    "landing",
    "payments",
    "products",
    "invoices",
    "fixtures",
    "customers",
    "business_suite",
    "customer_applications"
]
